--- a/Technical Doc Page/index.html
+++ b/Technical Doc Page/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <nav id="navbar">
-    <header>Technical Documentation Topics</header>
+    <header>Topics:</header>
     <ul>
       <li><a class="nav-link" href="#Introduction">Introduction</a></li>
       <li><a class="nav-link" href="#Chapter_2">Chapter 2</a></li>
@@ -27,9 +27,11 @@
 
   <main id="main-doc">
 
+    <h1>Technical Documentation Project</h1>
+    
     <section class="main-section" id="Introduction">
       <header>
-        <h1>Introduction</h1>
+        <h2>Introduction</h2>
       </header>
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
         dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
@@ -57,7 +59,7 @@
 
     <section class="main-section" id="Chapter_2">
       <header>
-        <h1>Chapter 2</h1>
+        <h2>Chapter 2</h2>
       </header>
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
         dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
@@ -76,7 +78,7 @@
 
     <section class="main-section" id="Chapter_3">
       <header>
-        <h1>Chapter 3</h1>
+        <h2>Chapter 3</h2>
       </header>
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
         dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
@@ -95,7 +97,7 @@
 
     <section class="main-section" id="Chapter_4">
       <header>
-        <h1>Chapter 4</h1>
+        <h2>Chapter 4</h2>
       </header>
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
         dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
@@ -114,7 +116,7 @@
 
     <section class="main-section" id="Chapter_5">
       <header>
-        <h1>Chapter 5</h1>
+        <h2>Chapter 5</h2>
       </header>
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
         dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
@@ -134,5 +136,7 @@
   </main>
 
 </body>
+
+</html>
 
 </html>
